--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div class="main-container">
-        <h1 class="Head">Timer</h1>
-        <div class="timer">00:00:00</div>
-        <div class="btns">
+        <div class="sub-container">
+            <h1 class="Head">Timer</h1>
+           <div class="timer">00:00:00</div>
+           <div class="btns">
             <div class="buttons">
                <img src="images/stop-button.png"alt="stop" class="button-icon" onclick="stopbtn()">
                <img src="images/pause-button.png"alt="onoff"  class="button-icon" id="button-icon-pause" 
                       onclick="startpausebtn()">
                <img src="images/refresh-arrow.png"alt="reset" class="button-icon" onclick="resetbtn()">
             </div>
+        </div>
         </div>
     </div>
     <script src="script.js"></script>
